--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,3 @@
-@font-face{
-    
-}
-
-
-
 *,
 *::after,
 *::before {
@@ -11,8 +5,11 @@
 }
 
 body {
-    margin : 0;
-    padding: 0;
+    margin     : 0;
+    padding    : 0;
+    font-family: 'Montserrat', sans-serif;
+    margin     : 0 auto;
+    color      : #252B42;
 }
 
 li {
@@ -21,4 +18,183 @@ li {
 
 a {
     text-decoration: none;
+}
+
+.header {
+    max-width        : 1440px;
+    margin           : 0 auto;
+    background-image : url(/imagies/cover.png);
+    
+    width            : 100%;
+    background-repeat: no-repeat;
+    background-size  : cover;
+    position: relative;
+    margin-bottom: 131px;
+}
+
+nav {
+
+    max-width  : 1300px;
+    display    : flex;
+    margin-left: 195px;
+}
+
+.header__logo {
+    font-weight   : bold;
+    font-size     : 24px;
+    line-height   : 32px;
+    letter-spacing: 0.1px;
+    color         : #252B42;
+}
+
+
+
+
+
+.list__menu {
+    display        : flex;
+    justify-content: center;
+    align-items    : center;
+    padding        : 0;
+    margin-left    : 117px;
+
+}
+
+.menu__item {
+    margin-left: 21px;
+}
+
+.menu__item:first-child {
+    margin-left: 0;
+}
+
+.link__menu {
+    font-style    : normal;
+    font-weight   : 600;
+    font-size     : 14px;
+    line-height   : 24px;
+    letter-spacing: 0.2px;
+    color         : #737373;
+
+}
+
+.link__menu:hover {
+    color     : black;
+    transition: .3s ease;
+}
+
+
+
+.header__burger-nav {
+    display    : block;
+    margin-left: 659px;
+}
+
+.header__container {
+    margin-left: 197px;
+    margin-top : 116px;
+}
+
+
+.header__title {
+    font-style    : normal;
+    font-weight   : 800;
+    font-size     : 58px;
+    line-height   : 80px;
+    letter-spacing: 0.2px;
+    max-width     : 509px;
+    margin-bottom : 0;
+}
+
+.header__desk {
+    font-style    : normal;
+    font-weight   : 500;
+    font-size     : 20px;
+    line-height   : 30px;
+    letter-spacing: 0.2px;
+    color         : #737373;
+    max-width     : 376px;
+    margin-top    : 35px;
+    margin-bottom : 35px;
+
+}
+
+
+
+.header__btn {
+    font-style    : normal;
+    font-weight   : bold;
+    font-size     : 14px;
+    line-height   : 28px;
+    letter-spacing: 0.2px;
+    color         : #00A0C1;
+    padding       : 10px 36px;
+    border-radius : 37px;
+    border        : none;
+    cursor        : pointer;
+}
+
+.header__btn:hover {
+    background-color: #FFA62B;
+    color           : #ffffff;
+    transition      : .3s ease;
+}
+
+.header__btn-second {
+    margin-left: 10px;
+}
+
+.header__items-cards {
+    margin-left : 197px;
+    display     : flex;
+    margin-right: 197px;
+    margin-top  : 80px;
+    position: relative;
+}
+
+.header__item-card {
+    width           : 328px;
+    justify-content : space-between;
+    background-color: #ffffff;
+    box-shadow: 0px 13px 19px rgba(0, 0, 0, 0.07);
+  
+
+}
+
+.header__item-card {
+    margin-left: 30px;
+}
+
+.header__item-card:first-child {
+    margin-left: 0;
+}
+
+.header__item--card-pic {
+    padding-top : 39px;
+    padding-left: 40px;
+}
+
+.header__item--card-title {
+
+    font-style    : normal;
+    font-weight   : bold;
+    font-size     : 24px;
+    line-height   : 32px;
+    letter-spacing: 0.1px;
+    color         : #252B42;
+    margin-top    : 13px;
+    padding-left  : 40px;
+}
+
+.header__item--card-desc {
+    font-style    : normal;
+    font-weight   : 500;
+    font-size     : 14px;
+    line-height   : 20px;
+    letter-spacing: 0.2px;
+    color         : #737373;
+    padding-left: 40px;
+    margin-top: 10px;
+    padding-right: 70px;
+    margin-bottom: 35px;
 }
