--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ body {
     font-family: 'Montserrat', sans-serif;
     margin     : 0 auto;
     color      : #252B42;
+    max-width  : 1440px;
 }
 
 li {
@@ -21,15 +22,16 @@ a {
 }
 
 .header {
-    max-width        : 1440px;
-    margin           : 0 auto;
-    background-image : url(/imagies/cover.png);
-    
+    max-width       : 1440px;
+    margin          : 0 auto;
+    background-image: url(/imagies/cover.png);
+
     width            : 100%;
     background-repeat: no-repeat;
     background-size  : cover;
-    position: relative;
-    margin-bottom: 131px;
+    position         : relative;
+    margin-bottom    : 131px;
+    z-index          : 2;
 }
 
 nav {
@@ -145,25 +147,40 @@ nav {
 }
 
 .header__items-cards {
-    margin-left : 197px;
-    display     : flex;
-    margin-right: 197px;
-    margin-top  : 80px;
-    position: relative;
+    padding-left : 197px;
+    display      : flex;
+    padding-right: 197px;
+    padding-top  : 80px;
+    position     : relative;
+    z-index      : 5;
+    flex-wrap    : wrap;
+
 }
 
 .header__item-card {
     width           : 328px;
     justify-content : space-between;
     background-color: #ffffff;
-    box-shadow: 0px 13px 19px rgba(0, 0, 0, 0.07);
-  
+    box-shadow      : 0px 13px 19px rgba(0, 0, 0, 0.07);
+    flex-wrap       : wrap;
+    cursor: pointer;
+
+
+
+
 
 }
+
+
+
+
 
 .header__item-card {
-    margin-left: 30px;
+    margin-left   : 30px;
+    animation-name: colors;
 }
+
+
 
 .header__item-card:first-child {
     margin-left: 0;
@@ -184,6 +201,7 @@ nav {
     color         : #252B42;
     margin-top    : 13px;
     padding-left  : 40px;
+    animation-name: colors;
 }
 
 .header__item--card-desc {
@@ -193,8 +211,218 @@ nav {
     line-height   : 20px;
     letter-spacing: 0.2px;
     color         : #737373;
-    padding-left: 40px;
-    margin-top: 10px;
-    padding-right: 70px;
-    margin-bottom: 35px;
+    padding-left  : 40px;
+    margin-top    : 10px;
+    padding-right : 70px;
+    margin-bottom : 35px;
+    animation-name: colors;
+}
+
+.header__item-card:hover   {
+    transition: .5s ease;
+    transform : scale(1.1);
+    background: #00A0C1;
+
+
+}
+
+
+
+.header__item-card:hover > img{
+    filter: #ffffff;
+}
+
+.header__item-card:hover  .header__item--card-title,.header__item--card-desc{
+    color: #ffffff;
+}
+
+
+
+
+
+
+
+
+.section__why {
+    margin       : 0 auto;
+    margin-bottom: 80px;
+}
+
+.inner__why {
+    margin    : 80px auto;
+    text-align: center;
+}
+
+
+
+.inner__why-block--title {
+    margin: 0 auto;
+}
+
+.inner__why-title {
+    margin-top    : 0;
+    margin-bottom : 0;
+    font-style    : normal;
+    font-weight   : bold;
+    font-size     : 40px;
+    line-height   : 57px;
+    letter-spacing: 0.2px;
+    color         : #252B42;
+}
+
+.inner__why-desc {
+    display       : block;
+    margin        : 0 auto;
+    font-style    : normal;
+    font-weight   : 500;
+    font-size     : 14px;
+    line-height   : 20px;
+    letter-spacing: 0.2px;
+    max-width     : 511px;
+    color         : #737373;
+    margin-top    : 10px;
+}
+
+.inner__why-cards {
+    margin-top     : 50px;
+    display        : flex;
+    justify-content: space-between;
+    margin-left    : 195px;
+    margin-right   : 195px;
+    align-items    : center;
+    margin-bottom  : 80px;
+}
+
+.inner__why-card {
+    width         : 230px;
+    display       : flex;
+    flex-direction: column;
+}
+
+.inner__why-pic {
+    display      : flex;
+    width        : 48px;
+    height       : 48px;
+    margin       : 0 auto;
+    margin-bottom: 10px;
+    margin-top   : 30px;
+}
+
+.inner__why-number {
+    display       : block;
+    font-style    : normal;
+    font-weight   : bold;
+    font-size     : 40px;
+    line-height   : 57px;
+    letter-spacing: 0.2px;
+    color         : #252B42;
+    margin-bottom : 10px;
+}
+
+.inner__why-subtitle {
+    display       : block;
+    font-style    : normal;
+    font-weight   : bold;
+    font-size     : 16px;
+    line-height   : 24px;
+    text-align    : center;
+    letter-spacing: 0.1px;
+    color         : #737373;
+    padding-bottom: 30px;
+}
+
+.wrapper__practice {
+    text-align: center;
+
+}
+
+
+
+.inner__practice-title {
+    font-style    : normal;
+    font-weight   : bold;
+    font-size     : 40px;
+    line-height   : 57px;
+    letter-spacing: 0.2px;
+    color         : #252B42;
+    margin-bottom : 10px;
+    padding-top   : 125px;
+}
+
+.inner__practice-dask {
+    font-style    : normal;
+    font-weight   : 500;
+    font-size     : 14px;
+    line-height   : 20px;
+    text-align    : center;
+    letter-spacing: 0.2px;
+    color         : #737373;
+    width         : 470px;
+    margin        : 0 auto;
+
+}
+
+
+
+.practice-cards {
+    margin-top     : 45px;
+    display        : flex;
+    margin-bottom  : 81px;
+    justify-content: center;
+}
+
+.practice__card {
+    width      : 230px;
+    margin-left: 40px;
+    transition : .3s ease;
+    cursor     : pointer;
+
+}
+
+.practice__card:hover {
+    transform: scale(1.1);
+}
+
+.practce__card:last-child {
+    padding-left: 0;
+}
+
+.practice__subtitle {
+    font-style    : normal;
+    font-weight   : bold;
+    font-size     : 16px;
+    line-height   : 24px;
+    letter-spacing: 0.1px;
+    color         : #252B42;
+    width         : 125px;
+    display       : block;
+    margin        : 0 auto;
+}
+
+.practice__subtitle--first {
+    width: 130px;
+}
+
+.practice__subtitle--second {}
+
+.practice__subtitle--thirty {}
+
+.practice__subtitle--fourty {
+    width: 103px;
+}
+
+
+.practice__card-desk {
+    font-style    : normal;
+    font-weight   : 500;
+    font-size     : 14px;
+    line-height   : 20px;
+    letter-spacing: 0.2px;
+    color         : #737373;
+    max-width     : 164px;
+    min-height    : 80px;
+    margin        : 0 auto;
+    margin-top    : 15px;
+    margin-bottom : 30px;
+
 }
